# cositos

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.binder  Dockerfile.binder-base  LICENSE  NOTICE  README.md  SECURITY.md  TOOL_EVALUATION.md  chat.md  coverage-manifest.toml  justfile  lefthook.yml  llm.txt  mise.toml  pretender.toml  pyproject.toml
.beads/: issues.jsonl
.binder/: Dockerfile  start.sh
.dont/: AGENTS.md  config.toml  db.cozo  events.jsonl
.dont/seed/: dont-seed.yaml
.espectacular/: AGENTS.md  config.toml
.espectacular/embed/: a-closing-script-tag-in-state-is-neutralised.toml  a-view-script-is-emitted-per-model.toml  each-model-s-state-carries-anywidget-view-identity.toml  only-requested-views-are-emitted.toml  the-cdn-html-manager-loader-is-included.toml  write-html-persists-the-page.toml  (+1 more)
.github/: release.yml
.wai/: AGENTS.md  config.toml
clojure/: .gitignore  README.md  deps.edn
csharp/: Core.cs  Program.cs  README.md  cositos.csproj
docs/: .gitignore  _quarto.yml  bd-sync.md  hooks.md  hosts.md  index.qmd  pluto.md  porting.md  prepare.sh  status.md  widgets-gallery.qmd  widgets.md
examples/: README.md
fixtures/: README.md  comm_open.json  controls-catalog.json  custom.json  update.json  update_nested_buffer.json  widget-state.json
front/: package-lock.json  package.json  tsconfig.json
julia/: Project.toml  README.md
openspec/: project.md
probe/: README.md  kernel_probe.py
r/: README.md  core.R  test.R
scripts/: coverage_audit.py  e2e_all.py
tests/: test_buffers.py  test_conformance.py  test_contrib_controls.py  test_contrib_harvest.py  test_e2e_all.py  test_e2e_clojure.py  test_e2e_controls.py  test_e2e_dashboard.py  test_e2e_julia.py  test_e2e_jupyter.py  test_e2e_python.py  test_embed.py  test_example_dashboard.py  test_jupyter.py  test_kernel_probe.py  test_lifecycle.py  test_model.py  test_notebooks.py  test_oracle_anywidget.py  test_protocol.py  test_serialize.py  test_shell.py  test_static_export.py
(+205 files in other folders)
