[project]
name = "cositos"
version = "0.0.1"
description = "Binding-free anywidget-style backend core for any Jupyter kernel language."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
comm = ["comm>=0.1"]
dev = ["pytest>=8", "ruff>=0.6"]
oracle = [
    "anywidget>=0.9.21",
    "comm>=0.2.3",
    "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cositos"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
