[project]
name = "cositos"
version = "0.0.1"
description = "Binding-free anywidget-style backend core for any Jupyter kernel language."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
comm = ["comm>=0.1"]
dev = [
    "hypothesis>=6",
    "mypy>=1.19.1",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
]
oracle = [
    "anywidget>=0.9.21",
    "comm>=0.2.3",
    "ipywidgets>=8.1.8",
]
e2e = [
    "ipykernel>=6.31.0",
    "jupyter-client>=8.6.3",
]
export = [
    "nbconvert>=7",
    "nbformat>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cositos"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests that launch a real Jupyter kernel (slow, opt-in)"]

[tool.coverage.run]
source = ["cositos"]
branch = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "\\.\\.\\."]

[tool.mypy]
files = ["src"]
python_version = "3.10"
strict = true
warn_unused_configs = true
no_implicit_reexport = false
